fix: Atualization code: improving endpoints